Started implementation with SQLite
