# doc/swagger-rp.json
@@ -234,14 +234,6 @@
                         "required": true,
                         "type": "integer",
                         "format": "int64"
-                    },
-                    {
-                        "name": "messageId",
-                        "in": "path",
-                        "description": "ID og queue to get",
-                        "required": true,
-                        "type": "integer",
-                        "format": "int64"
                     }
                 ],
                 "responses": {
@@ -497,8 +489,8 @@
             ],
             "properties": {
                 "id": {
-                    "type": "integer",
-                    "format": "int64"
+                    "type": "string",
+                    "description": "An URL friendly short name for your queue"
                 },
                 "name": {
                     "type": "string"
@@ -534,9 +526,14 @@
         "newQueue": {
             "type": "object",
             "required": [
+                "id",
                 "name"
             ],
             "properties": {
+                "id": {
+                    "type": "string",
+                    "description": "An URL friendly short name for your queue"
+                },
                 "name": {
                     "type": "string"
                 },
@@ -555,15 +552,18 @@
             "type": "object",
             "required": [
                 "code",
-                "message"
+                "messages"
             ],
             "properties": {
                 "code": {
                     "type": "integer",
                     "format": "int32"
                 },
-                "message": {
-                    "type": "string"
+                "messages": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
